<resources>
    <string name="app_name">Abitur</string>
    <string name="surname">Surname: </string>
    <string name="name">Name: </string>
    <string name="middlename">Middlename: </string>
    <string name="mark">Marks: </string>
    <string name="refresh">Refresh</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="load">Load from file</string>
    <string name="save">Save to file</string>
    <string name="score">Average score:</string>
</resources>