<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal"
        android:outlineAmbientShadowColor="@color/black">

        <TextView
            android:id="@+id/score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_weight="1"
            android:text="@string/score"/>

        <TextView
            android:id="@+id/ascore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/surname"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/name"/>

        <TextView
            android:id="@+id/middlename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/middlename"/>

        <TextView
            android:id="@+id/mark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mark"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="491dp">

        <GridView
            android:id="@+id/abitursGrid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:stretchMode="columnWidth"
            android:verticalSpacing="35dp"></GridView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/add"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:text="@string/add" />

        <Button
            android:id="@+id/load"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_weight="1"
            android:text="@string/load" />

        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:text="@string/save" />


    </LinearLayout>



</LinearLayout>